Fixed z-index in toggle nav

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
     background: none;
     position: absolute;
     width: 100%;
-    z-index: 99;
+    z-index: 1;
 }
 
 .navbar-brand img {
